Make app less specified
